public interface Observer {
    void atualizar(double temp);
}